# OptiCalc

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: 01_getting_started.md  02_pricing_european_options.md  03_pricing_bermuda_options.md  04_pricing_american_options.md
opticalc/: __init__.py  greeks.py  main.py  pricing.py  utils.py
opticalc/core/: american_option.py  base.py  bermuda_option.py  constants.py  enums.py  european_option.py  option.py  params.py  vanilla_base.py
opticalc/greeks/: black_scholes_greeks.py
opticalc/pricing/: bachelier_pricing.py  barone_adesi_whaley_pricing.py  base.py  binomial_pricing.py  bjerksund_stensland_pricing.py  black_scholes_pricing.py  monte_carlo_pricing.py
opticalc/strategy/: base.py
opticalc/utils/: _exceptions.py  _formulas.py  constants.py  exceptions.py  helpers.py
options_calculator/: __init__.py
options_calculator/core/: american_option.py  bermuda_option.py  european_option.py  implied_volatility.py  option.py  params.py  vanilla_base.py
options_calculator/greeks/: black_scholes_greeks.py
options_calculator/pricing/: bachelier_pricing.py  barone_adesi_whaley_pricing.py  base.py  binomial_pricing.py  bjerksund_stensland_pricing.py  black_scholes_pricing.py
options_calculator/strategy/: base.py
options_calculator/utils/: constants.py  helpers.py
