[project]
name = "options_calculator"
version = "0.1.2"
name = "options_calculator"
version = "0.1.2"
description = "An intuitive and versatile options library."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
authors = [
    {name = "Paul Wentzel"}
]

maintainers = [
    {name = "Paul Wentzel"}
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization"
]
keywords = ["options", "finance", "derivatives", "black-scholes", "binomial", "binomial tree", "greeks",
            "finance", "monte carlo", "american option", "european option", "quant", "quant finance",
            "trading", "bjerksund stensland"]

dependencies = [
    "numpy>=1.22.2",
    "scipy>=1.16.1",
    "matplotlib>=3.10.7"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "scipy-stubs>=1.16.2.0",
]

[project.urls]
Homepage = "https://github.com/PaulWentzel1/OptiCalc"
Repository = "https://github.com/PaulWentzel1/OptiCalc.git"
Issues = "https://github.com/PaulWentzel1/OptiCalc/issues"
Changelog = "https://github.com/PaulWentzel1/OptiCalc/blob/master/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/tests",
    "/.gitignore",
    "/.git",
    "*.pyc",
    "__pycache__",
    "dev.py"
]

[tool.hatch.build.targets.wheel]
exclude = [
    "/tests",
    "*.pyc",
    "__pycache__",
    "dev.py"
]
